--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8080
 
 spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3306/tikarTest
-spring.datasource.username=fitzgerard@
+spring.datasource.username=fitzgerard
 spring.datasource.password=Diablomanore237@localhost
 
 spring.jpa.generate-ddl=true 
