--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=Tikarsarl
-server.port=8080
+server.port=8085
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3306/tikarTest
 spring.datasource.username=fitzgerard
 spring.datasource.password=Diablomanore237@localhost
@@ -9,4 +9,5 @@ spring.datasource.password=Diablomanore237@localhost
 spring.jpa.generate-ddl=true 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl.auto=org.hibernate.dialect.MySQL8DBDialect
+
 
