--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,25 +1,30 @@
-name: "creation of CI test workflow"
+name: Maven Test
+
 on:
-  push: 
-    branches: "master"
-jobs: 
-  test:
+  push:
+    branches:
+      - master
+
+jobs:
+  build:
     runs-on: ubuntu-latest
 
     steps:
+    - uses: actions/checkout@v2
 
-    - name: "checking out repository"
-      uses: actions/checkout@v3
+    - name: Set up JDK 21
+      uses: actions/setup-java@v2
+      with:
+       distribution: 'temurin'
+       java-version: '21'
 
-    - name: "setting java development environment"
-      uses: actions/setup-java@v4
-      with: 
-        java-version: '21'
-        distribution: 'temurin'
-        cache: maven
-    
-    - name: "installing dependencies"
-      run: mvn clean install
+    - name: Cache Maven dependencies
+      uses: actions/cache@v2
+      with:
+        path: ~/.m2/repository
+        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+        restore-keys: |
+          ${{ runner.os }}-maven-
 
-    - name: "running build test"
-      run: mvn clean test
+    - name: Build and Test with Maven
+      run: mvn -B test
