--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,30 +1,32 @@
-name: Maven Test
+# This workflow will build a Java project with Maven
+# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
+
+name: Java CI with Maven
 
 on:
   push:
-    branches:
-      - master
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
+
+permissions:
+  contents: read
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-
+    - uses: actions/checkout@v4
     - name: Set up JDK 21
-      uses: actions/setup-java@v2
+      uses: actions/setup-java@v4
       with:
-       distribution: 'temurin'
-       java-version: '21'
-
-    - name: Cache Maven dependencies
-      uses: actions/cache@v2
-      with:
-        path: ~/.m2/repository
-        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-        restore-keys: |
-          ${{ runner.os }}-maven-
-
-    - name: Build and Test with Maven
-      run: mvn -B test
+        distribution: 'temurin'
+        java-version: '21'
+      
+        cache: 'maven'
+    - name: Build with Maven
+    
+      run: |
+        mvn clean test -B -e -X
