--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	<artifactId>Tikar</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Tikarsarl</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Server side powering the tikar app</description>
 	<properties>
 		<java.version>21</java.version>
 	</properties>
