--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,32 +1,30 @@
-# This workflow will build a Java project with Maven
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
-
-name: Java CI with Maven
+name: Maven Test
 
 on:
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-
-permissions:
-  contents: read
+    branches:
+      - master
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v2
+
     - name: Set up JDK 21
-      uses: actions/setup-java@v4
+      uses: actions/setup-java@v2
       with:
-        distribution: 'temurin'
-        java-version: '21'
-      
-        cache: 'maven'
-    - name: Build with Maven
-    
-      run: |
-        mvn clean test -B -e -X
+       distribution: 'temurin'
+       java-version: '21'
+
+    - name: Cache Maven dependencies
+      uses: actions/cache@v2
+      with:
+        path: ~/.m2/repository
+        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+        restore-keys: |
+          ${{ runner.os }}-maven-
+
+    - name: Build and Test with Maven
+      run: mvn -B test
